--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -2,6 +2,7 @@
 <repositories>
   <repository path="..\Diagnosis.App\packages.config" />
   <repository path="..\Diagnosis.Data\packages.config" />
+  <repository path="..\Diagnosis.Models\packages.config" />
   <repository path="..\Diagnosis.Tests\packages.config" />
   <repository path="..\Diagnosis.ViewModels\packages.config" />
 </repositories>
