EntityBase is IEditableObject. IsDirty set to false on insert/update

--- a/Diagnosis.Data/Diagnosis.Data.csproj
+++ b/Diagnosis.Data/Diagnosis.Data.csproj
@@ -115,6 +115,8 @@
     <Compile Include="Mappings\PatientPropertyMap.cs" />
     <Compile Include="Mappings\PatientMap.cs" />
     <Compile Include="Mappings\SymptomWordsMap.cs" />
+    <Compile Include="NHibernate\EntityChecker.cs" />
+    <Compile Include="NHibernate\Extensions.cs" />
     <Compile Include="NHibernate\InMemoryHelper.cs" />
     <Compile Include="NHibernate\Logging.cs" />
     <Compile Include="NHibernate\Net4Collections.cs" />
