--- a/Diagnosis.App/Diagnosis.App.csproj
+++ b/Diagnosis.App/Diagnosis.App.csproj
@@ -160,6 +160,9 @@
       <DependentUpon>AppointmentsTabs.xaml</DependentUpon>
     </Compile>
     <Compile Include="Controls\CardParts\SpecialCaseDataTemplateSelector.cs" />
+    <Compile Include="Controls\Common\UndoOverlay.xaml.cs">
+      <DependentUpon>UndoOverlay.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Controls\Helpers\DataGridHelper.cs" />
     <Compile Include="Controls\Helpers\FirstFocusedElementExtension.cs" />
     <Compile Include="Controls\Search\Filter.xaml.cs">
@@ -304,6 +307,10 @@
     <Page Include="Controls\CardParts\AppointmentsTabs.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
+    </Page>
+    <Page Include="Controls\Common\UndoOverlay.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Controls\Directory\EditableTreeStyle.xaml">
       <SubType>Designer</SubType>
