--- a/Diagnosis.Tests/Diagnosis.Tests.csproj
+++ b/Diagnosis.Tests/Diagnosis.Tests.csproj
@@ -73,16 +73,18 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="DataTests\DbTestBase.cs" />
+    <Compile Include="DataTests\SymptomsQueryTest.cs" />
     <Compile Include="SequencePartitionTest.cs" />
     <Compile Include="DateFormatterTest.cs" />
     <Compile Include="DateOffsetTest.cs" />
-    <Compile Include="HRTest.cs" />
-    <Compile Include="InMemoryDatabaseTest.cs" />
+    <Compile Include="DataTests\InMemoryTest.cs" />
+    <Compile Include="DataTests\InMemoryDatabaseTest.cs" />
     <Compile Include="PatientTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="QuerySeparatorTest.cs" />
-    <Compile Include="RepositoryTest.cs" />
-    <Compile Include="StartsWithTest.cs" />
+    <Compile Include="DataTests\HrQueryTest.cs" />
+    <Compile Include="DataTests\StartsWithTest.cs" />
     <Compile Include="StringExtensionTest.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -132,6 +134,10 @@
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
+  <PropertyGroup>
+    <PostBuildEvent>
+    </PostBuildEvent>
+  </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
