--- a/Diagnosis.Common/Diagnosis.Common.csproj
+++ b/Diagnosis.Common/Diagnosis.Common.csproj
@@ -96,6 +96,7 @@
     <Compile Include="Mediator\Events.cs" />
     <Compile Include="Util\Comparers.cs" />
     <Compile Include="Extensions\StringExtensions.cs" />
+    <Compile Include="Util\ExpressionHelper.cs" />
     <Compile Include="Util\Helpers.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="QuerySeparator.cs" />
