remove NumValue, add Measure and Uom entities (in test db)
--HG--
branch : data

--- a/Diagnosis.Data/Diagnosis.Data.csproj
+++ b/Diagnosis.Data/Diagnosis.Data.csproj
@@ -102,6 +102,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Mappings\MeasureMap.cs" />
+    <Compile Include="Mappings\UomMap.cs" />
     <Compile Include="Mappings\AppointmentMap.cs" />
     <Compile Include="Mappings\CategoryMap.cs" />
     <Compile Include="Mappings\SymptomMap.cs" />
