add logging to file with log4net

--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
   <repository path="..\Diagnosis.App\packages.config" />
+  <repository path="..\Diagnosis.Common\packages.config" />
   <repository path="..\Diagnosis.Data\packages.config" />
   <repository path="..\Diagnosis.Models\packages.config" />
   <repository path="..\Diagnosis.Tests\packages.config" />
