--- a/Diagnosis.App/App.config
+++ b/Diagnosis.App/App.config
@@ -1,6 +1,54 @@
-<?xml version="1.0"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
+  <configSections>
+    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler,Log4net" />
+  </configSections>
+  <log4net>
+    <appender name="TraceAppender" type="log4net.Appender.TraceAppender">
+      <layout type="log4net.Layout.PatternLayout">
+        <conversionPattern value="%date{ABSOLUTE} %-5level - %method:%line%newline   %message%newline" />
+      </layout>      
+    </appender>
+    <appender name="LogFileAppender" type="log4net.Appender.RollingFileAppender">
+      <file value="log.txt" />
+      <appendToFile value="true" />
+      <rollingStyle value="Size" />
+      <maxSizeRollBackups value="10" />
+      <maximumFileSize value="10MB" />
+      <staticLogFileName value="true" />
+      <layout type="log4net.Layout.PatternLayout">
+        <conversionPattern value="%date{ISO8601} %-5level %logger - %m%n" />
+      </layout>
+      <filter type="log4net.Filter.LevelRangeFilter">
+        <levelMin value="INFO" />
+        <levelMax value="FATAL" />
+      </filter>
+    </appender>
+    <root>
+      <level value="DEBUG" />
+      <appender-ref ref="LogFileAppender" />
+      <appender-ref ref="TraceAppender" />
+    </root>
+    <logger name="NHibernate" additivity="false">
+      <level value="WARN" />
+      <appender-ref ref="LogFileAppender" />
+      <appender-ref ref="TraceAppender" />
+    </logger>
+    <logger name="NHibernate.SQL" additivity="false">
+      <level value="WARN" />
+      <appender-ref ref="LogFileAppender" />
+      <appender-ref ref="TraceAppender" />
+    </logger>
+  </log4net>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0" />
   </startup>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="log4net" publicKeyToken="669e0ddf0bb1aa2a" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-1.2.13.0" newVersion="1.2.13.0" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
 </configuration>
