--- a/Diagnosis.Models/packages.config
+++ b/Diagnosis.Models/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="FluentValidation" version="5.4.0.0" targetFramework="net40" />
   <package id="Iesi.Collections" version="3.3.3.4001" targetFramework="net40" />
+  <package id="log4net" version="2.0.3" targetFramework="net40" />
 </packages>
