--- a/Diagnosis.ViewModels/packages.config
+++ b/Diagnosis.ViewModels/packages.config
@@ -3,5 +3,6 @@
   <package id="FluentValidation" version="5.4.0.0" targetFramework="net40" />
   <package id="Iesi.Collections" version="3.3.3.4001" targetFramework="net40" />
   <package id="LinqSpecs" version="1.0" targetFramework="net40" />
+  <package id="log4net" version="2.0.3" targetFramework="net40" />
   <package id="NHibernate" version="3.3.3.4001" targetFramework="net40" />
 </packages>
