--- a/Diagnosis.App/Diagnosis.App.csproj
+++ b/Diagnosis.App/Diagnosis.App.csproj
@@ -572,6 +572,7 @@
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>PublicResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <None Include="App.config" />
     <None Include="packages.config" />
@@ -622,25 +623,25 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="Resources\save_16xLG.png" />
+    <Resource Include="Resources\Images\save_16xLG.png" />
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="Resources\AddControl_371.png" />
+    <Resource Include="Resources\Images\AddControl_371.png" />
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="Resources\Close_16xLG.png" />
+    <Resource Include="Resources\Images\Close_16xLG.png" />
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="Resources\Arrow_UndoRevertRestore_16xLG.png" />
+    <Resource Include="Resources\Images\Arrow_UndoRevertRestore_16xLG.png" />
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="Resources\Delete_black_32x32.png" />
+    <Resource Include="Resources\Images\Delete_black_32x32.png" />
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="Resources\126_Edit_24x24_72.png" />
+    <Resource Include="Resources\Images\126_Edit_24x24_72.png" />
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="Resources\Find_5650.png" />
+    <Resource Include="Resources\Images\Find_5650.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
