add not null to all mappings
--HG--
branch : data

--- a/Diagnosis.Data/Diagnosis.Data.csproj
+++ b/Diagnosis.Data/Diagnosis.Data.csproj
@@ -153,7 +153,7 @@
     <Compile Include="Mappings\MeasureMap.cs" />
     <Compile Include="Mappings\UomMap.cs" />
     <Compile Include="Mappings\AppointmentMap.cs" />
-    <Compile Include="Mappings\CategoryMap.cs" />
+    <Compile Include="Mappings\HrCategoryMap.cs" />
     <Compile Include="Mappings\SpecialityMap.cs" />
     <Compile Include="Mappings\IcdDiseaseMap.cs" />
     <Compile Include="Mappings\IcdBlockMap.cs" />
