--- a/Diagnosis.ViewModels/Diagnosis.ViewModels.csproj
+++ b/Diagnosis.ViewModels/Diagnosis.ViewModels.csproj
@@ -152,7 +152,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AuthorityController.cs" />
+    <Compile Include="Screens\Card\CourseViewModel1.cs" />
     <Compile Include="Screens\Card\HrListViewModel.cs" />
+    <Compile Include="Screens\Card\Managers\AppointmentsManager1.cs" />
     <Compile Include="Screens\Card\ShortHealthRecordViewModel.cs" />
     <Compile Include="Screens\Card\ShortAppointmentViewModel.cs" />
     <Compile Include="Screens\Card\ShortCourseViewModel.cs" />
