--- a/Diagnosis.App/App.config
+++ b/Diagnosis.App/App.config
@@ -10,12 +10,14 @@
       </layout>      
     </appender>
     <appender name="LogFileAppender" type="log4net.Appender.RollingFileAppender">
-      <file value="log.txt" />
+      <lockingModel type="log4net.Appender.FileAppender+MinimalLock"/>
+      <file value="Logs\\" />
+      <datePattern value="yyyy.MM.dd'.log'" />
+      <staticLogFileName value="false" />
       <appendToFile value="true" />
-      <rollingStyle value="Size" />
+      <rollingStyle value="Composite" />
       <maxSizeRollBackups value="10" />
-      <maximumFileSize value="10MB" />
-      <staticLogFileName value="true" />
+      <maximumFileSize value="1MB" />
       <layout type="log4net.Layout.PatternLayout">
         <conversionPattern value="%date{ISO8601} %-5level %logger - %m%n" />
       </layout>
