xaml. Replace two HrsHolderDataTemplateSelectors with only one
for IHrsHolder and VMs

--- a/Diagnosis.App/Diagnosis.App.csproj
+++ b/Diagnosis.App/Diagnosis.App.csproj
@@ -208,7 +208,7 @@
     <Compile Include="Controls\Headers\Patient.xaml.cs">
       <DependentUpon>Patient.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Controls\Search\HrsHolderDataTemplateSelector.cs" />
+    <Compile Include="Controls\Common\HrsHolderDataTemplateSelector.cs" />
     <Compile Include="Controls\Search\HrSearchResult2.xaml.cs">
       <DependentUpon>HrSearchResult2.xaml</DependentUpon>
     </Compile>
